@@ -173,7 +173,7 @@ public class Cockpit extends JApplet implements S3ServiceEventListener, ActionLi
     public static final String AMAZON_S3_PAGE = "http://www.amazon.com/s3";
     public static final String OS_NAME_MAC = "Mac OS X";
 
-    public static final String APPLICATION_DESCRIPTION = "Cockpit/0.8.1";
+    public static final String APPLICATION_DESCRIPTION = "Cockpit/" + Constants.JETS3T_VERSION;
 
     public static final String APPLICATION_TITLE = "JetS3t Cockpit";
     private static final int BUCKET_LIST_CHUNKING_SIZE = 1000;
